...
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:orientation="vertical"
    android:padding="12dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tILTopicName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/topic_name">
        <!-- Enforce front end 255 character validation -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tIETTopicName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="255"
            android:maxLines="1"
            app:errorEnabled="true">

            <requestFocus />
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btCreateTopic"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/create" />

</LinearLayout>
...
